--- a/bodytracker.html
+++ b/bodytracker.html
@@ -2,6 +2,6 @@
 <head>
 </head>
 <body>
-  <div id=outer><div class='ac b'>Fat Percentage Calculator</div><div id=cover><form name=fp><table class=main><col class=w60><col class=w60><tr><td>Measuring System<td><select id=msf onchange=msystem();><option value=metric>Metric (Kgs, Cms)<option value=us>US (lbs, inches)</select><tr><td>Sex<td><select id=sf><option value=m>Male<option value=f>Female</select><tr><td>Height <span id=thf>(Cms)</span><td><input id=hf><tr><td>Neck Girth<span id=tneck> (Cms)</span><td><input id=neck><tr><td>Waist <span id=twaist>(Cms)</span><td><input id=waist><tr><td>Hips <span id=thips>(Cms)</span><td><input id=hips><tr><td><button type=reset>Reset</button><td><button type=button onclick='bfat();'>Submit</button><tr><td>Your Body Fat<td><input id=bf class=op><tr><td>Body Fat Category<td><input id=nbf class=op><tr><td colspan=2 class='ac b'>Calculations are as per US Navy Formula</table></form></div></div>
+ <div id="inch-calculator-icw" data-ct="body_fat" data-cw="320" data-ch="1000" data-cv="MTE2OTIzNzk0OTg="><div id="inch-calculator-icwh">Body Fat Calculator</div><div id="inch-calculator-icwf"><a id="inch-calculator-icwi" href="https://www.inchcalculator.com/body-fat-calculator/" target="_blank"><img id="inch-calculator-icwl" src="https://cdn.inchcalculator.com/e/inch-calculator-logo-tiny.png" alt="Inch Calculator Logo"><span id="inch-calculator-icwb">Inch Calculator</span></a></div></div><script src="https://cdn.inchcalculator.com/e/widgets.min.js" async defer></script>
 </body>
 </html>
