--- a/stories.html
+++ b/stories.html
@@ -7,7 +7,7 @@
   "feedMode": "all_symbols",
   "colorTheme": "light",
   "isTransparent": true,
-  "displayMode": "adaptive",
+  "displayMode": "regular",
   "width": "100%",
   "height": "100%",
   "locale": "en"
