--- a/btcdom.html
+++ b/btcdom.html
@@ -10,11 +10,11 @@
     ]
   ],
   "chartOnly": false,
-  "width": 550,
-  "height": "400",
+  "width": "100%",
+  "height": "100%",
   "locale": "en",
   "colorTheme": "light",
-  "autosize": false,
+  "autosize": true,
   "showVolume": false,
   "showMA": false,
   "hideDateRanges": false,
