--- a/btcdom.html
+++ b/btcdom.html
@@ -10,15 +10,15 @@
     ]
   ],
   "chartOnly": false,
-  "width": "100%",
-  "height": "100%",
+  "width": "350",
+  "height": "600",
   "locale": "en",
   "colorTheme": "light",
-  "autosize": true,
+  "autosize": false,
   "showVolume": false,
   "showMA": false,
   "hideDateRanges": false,
-  "hideMarketStatus": false,
+  "hideMarketStatus": true,
   "hideSymbolLogo": false,
   "scalePosition": "right",
   "scaleMode": "Normal",
@@ -37,7 +37,8 @@
     "12m|1D",
     "60m|1W",
     "all|1M"
-  ]
+  ],
+  "timeHoursFormat": "24-hours"
 }
   </script>
 </div>
