--- a/btcdom.html
+++ b/btcdom.html
@@ -10,8 +10,8 @@
     ]
   ],
   "chartOnly": false,
-  "width": "350",
-  "height": "600",
+  "width": "300",
+  "height": "400",
   "locale": "en",
   "colorTheme": "light",
   "autosize": false,
@@ -20,10 +20,10 @@
   "hideDateRanges": false,
   "hideMarketStatus": true,
   "hideSymbolLogo": false,
-  "scalePosition": "right",
+  "scalePosition": "no",
   "scaleMode": "Normal",
   "fontFamily": "-apple-system, BlinkMacSystemFont, Trebuchet MS, Roboto, Ubuntu, sans-serif",
-  "fontSize": "6",
+  "fontSize": "10",
   "noTimeScale": false,
   "valuesTracking": "1",
   "changeMode": "price-and-percent",
