--- a/btcdom.html
+++ b/btcdom.html
@@ -2,43 +2,17 @@
 <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
   <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/" rel="noopener nofollow" target="_blank"><span class="blue-text">Track all markets on TradingView</span></a></div>
-  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-symbol-overview.js" async>
+  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-mini-symbol-overview.js" async>
   {
-  "symbols": [
-    [
-      "CRYPTOCAP:BTC.D|1M"
-    ]
-  ],
-  "chartOnly": false,
-  "width": "300",
-  "height": "400",
+  "symbol": "CRYPTOCAP:BTC.D",
+  "width": "250",
+  "height": "250",
   "locale": "en",
+  "dateRange": "12M",
   "colorTheme": "light",
+  "isTransparent": false,
   "autosize": false,
-  "showVolume": false,
-  "showMA": false,
-  "hideDateRanges": false,
-  "hideMarketStatus": true,
-  "hideSymbolLogo": false,
-  "scalePosition": "no",
-  "scaleMode": "Normal",
-  "fontFamily": "-apple-system, BlinkMacSystemFont, Trebuchet MS, Roboto, Ubuntu, sans-serif",
-  "fontSize": "10",
-  "noTimeScale": false,
-  "valuesTracking": "1",
-  "changeMode": "price-and-percent",
-  "chartType": "area",
-  "lineWidth": 2,
-  "lineType": 0,
-  "dateRanges": [
-    "1d|60",
-    "1m|30",
-    "3m|60",
-    "12m|1D",
-    "60m|1W",
-    "all|1M"
-  ],
-  "timeHoursFormat": "24-hours"
+  "largeChartUrl": ""
 }
   </script>
 </div>
