--- a/btcwidget.html
+++ b/btcwidget.html
@@ -5,15 +5,14 @@
   <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-mini-symbol-overview.js" async>
   {
   "symbol": "BINANCE:BTCUSDT",
-  "width": "300",
-  "height": "300",
+  "width": "250",
+  "height": "250",
   "locale": "en",
-  "dateRange": "3M",
+  "dateRange": "12M",
   "colorTheme": "light",
   "isTransparent": false,
   "autosize": false,
-  "largeChartUrl": "",
-  "noTimeScale": false
+  "largeChartUrl": ""
 }
   </script>
 </div>
