--- a/btcdom.html
+++ b/btcdom.html
@@ -5,14 +5,16 @@
   <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-mini-symbol-overview.js" async>
   {
   "symbol": "CRYPTOCAP:BTC.D",
-  "width": "250",
-  "height": "250",
+  "width": "200",
+  "height": "200",
   "locale": "en",
-  "dateRange": "12M",
+  "dateRange": "1M",
   "colorTheme": "light",
   "isTransparent": false,
   "autosize": false,
-  "largeChartUrl": ""
+  "largeChartUrl": "",
+  "chartOnly": false,
+  "noTimeScale": false
 }
   </script>
 </div>
